izbrisani dijelovi stare stranice, dodati novi

--- a/addcontact.html
+++ b/addcontact.html
@@ -50,43 +50,22 @@
                 <div class="row">
                     <div class="col-xs-8 col-sm-7 col-md-4 login-form">
                         <form class="formLogin" action="">
-                            <h2>Please sign up</h2>
                             <label for="inputName" class="sr-only">First name</label>
-                            <input type="text" id="inputName" class="form-control" placeholder="Username" required autofocus>
-                            <label for="inputPassword" class="sr-only">Password</label>
-                            <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+                            <input type="text" id="inputName" class="form-control" placeholder="First name" required autofocus>
+                            <label for="inputLName" class="sr-only">Last name</label>
+                            <input type="text" id="inputLName" class="form-control" placeholder="Last name" required>
                             <label for="inputEmail" class="sr-only">Email address</label>
                             <input type="email" id="inputEmail" class="form-control" placeholder="Email" required>
-                            <label for="inputEmaliRepeat" class="sr-only">Email repeat</label>
-                            <input type="email" id="inputEmailRepeat" class="form-control" placeholder="Repaet email" required>
+                            <label for="inputPhone" class="sr-only">Phone</label>
+                            <input type="text" id="inputPhone" class="form-control" placeholder="Phone" required>
                             <label for="inputCity" class="sr-only">City</label>
                             <input type="text" id="inputCity" class="form-control" placeholder="City" required>
-                            <p id="loglink"><a href="index.html">Sign up</a></p>
-                            <input class="button" type="submit" name="signup" value="Sign up" />
+                            <p id="loglink"><a href="userhome.html">Add contact</a></p>
+                            <input class="button" type="submit" name="AddContact" value="Add contact" />
                         </form>
                     </div>
                 </div>
             </article>
-            <div class="bgimg">
-                <div class="containerLog">
-                    <div class="input-group input-group-lg">
-                        <input type="text" class="form-control" placeholder="Name" aria-describedby="sizing-addon1">
-                    </div>
-                    <div class="input-group input-group-lg">
-                        <input type="text" class="form-control" placeholder="Lastname" aria-describedby="sizing-addon1">
-                    </div>
-                    <div class="input-group input-group-lg">
-                        <input type="text" class="form-control" placeholder="Email" aria-describedby="sizing-addon1">
-                    </div>
-                    <div class="input-group input-group-lg">
-                        <input type="text" class="form-control" placeholder="Phone" aria-describedby="sizing-addon1">
-                    </div>
-                    <div class="input-group input-group-lg">
-                        <input type="text" class="form-control" placeholder="City" aria-describedby="sizing-addon1">
-                    </div>
-                    <p id="loglink"><a href="userhome.html">Add conract</a></p>
-                </div>
-            </div>
         </div>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
