--- a/userhome.html
+++ b/userhome.html
@@ -47,19 +47,17 @@
 
         <div id="content">
             <article class="container bgimg">
-            </article>
-            <div class="bgimg">
-                <div class="containerLog">
-                    <h2>My Home Page</h2>
-                    <div class="input-group input-group-lg">
-                        <input type="text" class="form-control" placeholder="Username" aria-describedby="sizing-addon1">
+                <div class="row">
+                    <div class="col-xs-8 col-sm-7 col-md-4 login-form">
+                        <h2>Search contact</h2>
+                        <form class="formLogin" action="">
+                            <label></label>
+                            <input type="search" id="inputSearch" class="form-control" placeholder="Search" required autofocus />
+                            <input type="submit" class="button" name="Search"value="Search" />
+                        </form>
                     </div>
-                    <div class="input-group input-group-lg">
-                        <input type="text" class="form-control" placeholder="Password" aria-describedby="sizing-addon1">
-                    </div>
-                    <p id="loglink"><a href="userhome.html">Login</a></p>
                 </div>
-            </div>
+            </article>
         </div>
 
     </div>
