--- a/listcontacts.html
+++ b/listcontacts.html
@@ -46,6 +46,10 @@
 
         <div id="content">
             <article class="container bgimg">
+                <div class="row">
+                    <div class="col-md-3"></div>
+                    <div class="col-md-3"></div>
+                </div>
             </article>
         </div>
     </div>
