--- a/userhome.html
+++ b/userhome.html
@@ -51,7 +51,7 @@
                     <div class="col-xs-8 col-sm-7 col-md-4 login-form">
                         <h2>Search contact</h2>
                         <form class="formLogin" action="">
-                            <label></label>
+                            <label class="sr-only">Search</label>
                             <input type="search" id="inputSearch" class="form-control" placeholder="Search" required autofocus />
                             <input type="submit" class="button" name="Search"value="Search" />
                         </form>
